# test-data-protocols

./: .env.example  .gitignore  Makefile  README.md  main.py  pyproject.toml
dbt/trino_pipeline/: dbt_project.yml  profiles.yml.example
dbt/trino_pipeline/models/marts/: survival_by_class.sql
dbt/trino_pipeline/seeds/: titanic_seed.csv
infra/: docker-compose.trino.yml
infra/dbt/: Dockerfile
infra/trino/etc/: jvm.config  node.properties
infra/trino/etc/catalog/: delta.properties
notebooks/: kaggle_s3_lake_pipeline.ipynb
scripts/: prepare_dbt_seed.py  read_trino_table.sh  run_demo.sh  run_trino_dbt_pipeline.sh
src/kaggle_s3_lake/: __init__.py  cli.py  config.py  kaggle_download.py  readers.py  writers.py
tests/: test_cli.py
