[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trino-delta-s3-pipeline"
version = "0.1.0"
description = "Local dbt -> Trino -> S3 pipeline with Delta Lake tables"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Data Platform Team" }]
dependencies = [
  "pandas>=2.2"
]

[project.optional-dependencies]
notebook = [
  "jupyter>=1.0"
]
